Added bookings and cuisine to views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <nav>
       <% if @current_user.present? %>
         <%= link_to 'All Users', users_path %>
+        <%= link_to 'All Cuisines', users_path %>
+        <%= link_to 'All Bookings', users_path %>
         <%= link_to 'New User', new_user_path %>
         <%= link_to "Sign Out #{ @current_user.email }", login_path, :method => 'delete' %>
       <% else %>
