--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,5 +1,4 @@
-<h2><%= @booking.name %></h2>
-<%= image_tag @booking.image, :class => 'feature' %>
+<h2><%= @booking.when %></h2>
 <ul>
   <li>When: <%= @booking.when %></li>
   <li>Address: <%= @booking.address %></li>
