--- a/app/views/cuisines/index.html.erb
+++ b/app/views/cuisines/index.html.erb
@@ -1,7 +1,11 @@
 <h1>All Cuisines</h1>
-<% @cuisines.each do |user| %>
-  <%= image_tag user.image, :class => 'thumb' %>
+<% @cuisines.each do |cuisine| %>
+  <%= image_tag cuisine.image, :class => 'thumb' %>
 <ul>
   <li>Name: <%= link_to cuisine.name, cuisines_path %></li>
 </ul>
+
+
+
+
 <% end %>
