--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,16 @@
 <h1>All Users</h1>
 <% @users.each do |user| %>
   <%= image_tag user.image, :class => 'thumb' %>
-<ul>
-  <li>Name: <%= link_to user.name, users_path %></li>
-  <li>Bio: <%= link_to user.bio, users_path %></li>
-  <li>Location: <%= link_to user.location, users_path %></li>
-  <li>Chef: <%= link_to user.chef, users_path %></li>
-  <li>Phone: <%= link_to user.phone, users_path %></li>
-  <li>Email: <%= link_to user.email, users_path %></li>
-</ul>
+  <ul>
+    <li>Name: <%= link_to user.name, users_path %></li>
+    <li>Bio: <%= link_to user.bio, users_path %></li>
+    <li>Location: <%= link_to user.location, users_path %></li>
+    <li>Chef: <%= user.chef %></li>
+  </ul>
+
+  <div class="controls">
+    <%= link_to 'Edit user', edit_user_path(user.id) %>
+    <%= link_to 'Delete user', user_path(user.id), :method => 'delete' %>
+  </div>
+
 <% end %>
