--- a/app/views/cuisines/_form.html.erb
+++ b/app/views/cuisines/_form.html.erb
@@ -1,3 +1,14 @@
+<% if flash[:errors].present? %>
+ <strong>Please correct the following errors in the form:</strong>
+ <ol>
+   <% flash[:errors].each do |error| %>
+     <li>
+       <%= error %>
+     </li>
+   <% end %>
+ </ol>
+<% end %>
+
 <%= form_for @cuisine do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name, :autofocus => true, :required => true %>
