--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @booking.when %></h2>
+<h2><%= @booking.user_id %></h2>
 <ul>
   <li>When: <%= @booking.when %></li>
   <li>Address: <%= @booking.address %></li>
