--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
     <li>Bio: <%= link_to user.bio, users_path %></li>
     <li>Location: <%= link_to user.location, users_path %></li>
     <li>Chef: <%= user.chef %></li>
+    <li>Phone: <%= user.phone %></li>
   </ul>
 
   <div class="controls">
