--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,70 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="row">
+  <div class="offset-md-4 col-md-8"><br>
+    <h1>Welcome To Chefz Table</h1><br>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h2>What is Chefz Table?</h2>
+    <p>Chefz Table is an online network of certified, professional chefz providing
+      on-site meal preparation and individual or group cooking classes from the
+      comfort of your home. Simply search through the chefz on offer to find the
+      best match for you and your friends. Then settle in for a night of
+      entertainment, learning, and an experience you will remember for years.</p>
+    <p>We have a multitude of chefz, that are well versed in multiple cuisines.
+      They are here to provide you a safe learning environment and you have the
+      opportunity to ask as many questions as you want with an expert. We
+      believe that food is a way to bring people together. Another benefit of
+      Chefz Table is that it works on your time schedule. During the lessons you
+      will learn new terminology, basic skills, be introduced to new ideas, improve
+      the timing of elements of your meal, and expand your existing palate.</P>
+  </div>
+
+  <div class="col-md-4 ">
+    <h2>How Does it Work?</h2>
+    <strong>IN-HOME COOKING CLASSES</strong>
+    <p>Our Chefz are all culinary-trained, certified professionals, and have been
+      vetted by Chefz Table - so all your customers have to do is choose from among
+      75 cooking classes, and book the service!</p>
+
+          <li>Class size: from 1-6 people</li>
+          <li>Up to three hours in length</li>
+          <li>Prices range from $90-$360</li>
+
+    <p>With over six dozen classes to choose from, your customers can learn techniques
+      from around the world, including Italian and Thai, French or even sushi.
+      There are six categories to choose from, each with sample menus and course
+      description. With Chefz Table, clients can also get reviews on different
+      Chefz & caterers, as well as reviews of the available cooking courses.</P>
+    <strong>PERSONAL CHEFZ™ SERVICE</strong>
+      <p>This service is for those who don’t have the time or ability to cook for
+        themselves, but have the resources to hire someone else to do it for them.
+        With Personal Chefz service, stress-free meals are prepared to client
+        specifications.  And because clients are involved with ingredient
+        selection, they have ultimate quality control over their diet. Personal
+        Chefz handle:</p>
+
+        <li>All menu planning</li>
+        <li>Grocery shopping</li>
+        <li>Cooking</li>
+        <li>Packaging</li>
+        <li>Kitchen cleanup</li>
+    </div>
+
+  <div class="col-md-4">
+    <h2>PARTNER WITH CHEFZ TABLE</h2>
+    <p>Earn an effortless additional revenue stream by offering your customers
+      (clients, members, etc) an extra value-added service that complements your
+      brand. Whether you are a home goods retailer, premium grocer, or online
+      bridal registry – Chefz Table is the perfect, no-hassle partner to generate
+      additional revenue for your business.</p>
+    <p>You earn 10% of the overall revenue when your customer books a service with
+      Chefz Table. So, for a single family spending $500 per month with Personal
+      Chefz, you will earn $50. When someone books an in-home cooking class for 6,
+      spending $360 – you will earn $36.  Multiply this across all retail outlets,
+      catalogs and your online store, and it is easy to see how quickly the figures
+      add up - all without any investment or effort, other than promoting Chefz Table
+      through a simple link or Point Of Sale offer.</P>
+  </div>
+</div>
