--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="controls">
   <%= link_to 'Edit booking', edit_booking_path(booking.id) %>
-  <%= link_to 'Delete booking', booking_path(booking.id), :method => 'delete' %>
+  <%= link_to 'Delete booking', booking_path(booking.id), method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
 
 <% end %>
