--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,46 @@
   </head>
 
   <body>
-    <nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-#7AB80D">
+  <a class="navbar-brand" href="/">Chefz Table</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users">All Users</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/new">New User</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cuisines">All Cuisines</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cuisines/new">New Cuisine</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/bookings">All Bookings</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/bookings/new">New Booking</a>
+      </li>
+      </div>
+    </nav>
+    <br>
+    <div class="logo">
+    <%= image_tag("logo/ChefzTableLogo.jpg") %>
+    </div>
+
+      <%= yield %>
+      </body>
+      </html>
+      <!--
+      </li>
       <% if @current_user.present? %>
         |
         <%= link_to 'All Users', users_path %>
@@ -32,7 +71,4 @@
         <%= link_to 'Sign Up', new_user_path %>
         <%= link_to 'Sign In', login_path %>
       <% end %>
-    </nav>
-    <%= yield %>
-  </body>
-</html>
+    </nav>-->
