--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,32 +10,50 @@
 <% end %>
 
 <%= form_for @user do |f| %>
+  <div class="form-group">
   <%= f.label :name %>
   <%= f.text_field :name, :autofocus => true, :required => true %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :email %>
   <%= f.text_field :email, :required => true %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :password %>
   <%= f.password_field :password, :required => true %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation, :required => true %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :phone %>
   <%= f.phone_field :phone, :required => true %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :location %>
   <%= f.text_field :location, :required => true %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :bio %>
   <%= f.text_field :bio, :required => true %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :image %>
   <%= f.url_field :image, :required => true %>
+  </div>
 
+  <div class="form-group">
   <%= f.label :chef %>
   <%= f.check_box :chef, :null => false %>
+  </div>
 
   <%= f.submit %>
 <% end %>
