--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
 
   <div class="controls">
     <%= link_to 'Edit user', edit_user_path(user.id) %>
-    <%= link_to 'Delete user', user_path(user.id), :method => 'delete' %>
+    <%= link_to 'Delete user', user_path(user.id), method: :delete, data: { confirm: 'Are you sure?' } %>
   </div>
 
 <% end %>
