fixing broken css code

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,7 +49,7 @@
         <li>Grocery shopping</li>
         <li>Cooking</li>
         <li>Packaging</li>
-        <li>Kitchen cleanup</li>
+        <li>Kitchen cleanup</li><br>
     </div>
 
   <div class="col-md-4">
