--- a/app/views/cuisines/index.html.erb
+++ b/app/views/cuisines/index.html.erb
@@ -1,16 +1,23 @@
 <h1>All Cuisines</h1>
 <% @cuisines.each do |cuisine| %>
-  <%= image_tag cuisine.image, :class => 'thumb' %>
-<ul>
-  <li>Name: <%= link_to cuisine.name, cuisine_path(cuisine.id) %></li>
 
-</ul>
 
-<div class="controls">
-  <%= link_to 'Edit cuisine', edit_cuisine_path(cuisine.id) %>
-  <%= link_to 'Delete cuisine', cuisine_path(cuisine.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+<div class="item">
+  <div class="photo" style="background-image:url(<%= cuisine.image  %>)"></div>
+  <div class="controls">
 
+    <%= link_to cuisine.name, cuisine_path(cuisine.id) %>
+    <%= link_to 'Edit', edit_cuisine_path(cuisine.id) %>
+    <%= link_to 'Delete', cuisine_path(cuisine.id), method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
+
+
+  </div>
+
+
+
+
+
 
 
 <% end %>
