--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,19 @@
 <h1>All Users</h1>
 <% @users.each do |user| %>
-  <%= image_tag user.image, :class => 'thumb' %>
-  <ul>
-    <li>Name: <%= link_to user.name, user_path(user.id) %></li>
-    <li>Bio: <%= link_to user.bio, users_path %></li>
-    <li>Location: <%= link_to user.location, users_path %></li>
-    <li>Chef: <%= user.chef %></li>
-    <li>Phone: <%= user.phone %></li>
-  </ul>
 
+<div class="item">
+  <div class="photo" style="background-image:url(<%= user.image %>)"></div>
   <div class="controls">
-    <%= link_to 'Edit user', edit_user_path(user.id) %>
-    <%= link_to 'Delete user', user_path(user.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+    Name: <%= link_to user.name, user_path(user.id) %><br>
+    Bio: <%= link_to user.bio, users_path %><br>
+    Location: <%= link_to user.location, users_path %><br>
+    Chef: <%= user.chef %><br>
+    <%= link_to 'Edit', edit_user_path(user.id) %>
+    <%= link_to 'Delete', user_path(user.id), method: :delete, data: { confirm: 'Are you sure?' } %>
+
   </div>
+</div>
+</div>
+
 
 <% end %>
