--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
       <li class="nav-item active">
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/login">Sign In</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/users">All Users</a>
       </li>
       <li class="nav-item">
@@ -38,6 +41,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/bookings/new">New Booking</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/login/">Sign Out</a>
       </li>
       </div>
     </nav>
