--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
         <a class="nav-link" href="/bookings/new">New Booking</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/login/">Sign Out</a>
+        <a class="nav-link" href="/login">Sign Out</a>
       </li>
       </div>
     </nav>
@@ -55,7 +55,7 @@
       <%= yield %>
       </body>
       </html>
-      <!--
+<!--
       </li>
       <% if @current_user.present? %>
         |
@@ -77,4 +77,4 @@
         <%= link_to 'Sign Up', new_user_path %>
         <%= link_to 'Sign In', login_path %>
       <% end %>
-    </nav>-->
+    </nav> -->
