--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -8,12 +8,12 @@
 
   <div class="form-row">
   <%= label_tag :email %>
-  <%= email_field_tag :email, nil, :class => 'form-control' %>
+  <%= email_field_tag :email, nil %>
   </div>
 
   <div class="form-row">
   <%= label_tag :password %>
-  <%= password_field_tag :password, nil, :class => 'form-control' %>
+  <%= password_field_tag :password, nil %>
   </div>
 
   <%= submit_tag "Sign in" %>
