--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,8 @@
       <%= yield %>
       </body>
       </html>
-<!--
+      
+<!-- Old code that I discontinued in favour of Bootstrap.
       </li>
       <% if @current_user.present? %>
         |
