--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,8 +1,8 @@
 <h2><%= @booking.user_id %></h2>
-<ul>
-  <li>When: <%= @booking.when %></li>
-  <li>Address: <%= @booking.address %></li>
-</ul>
+
+When: <%= @booking.when %><br>
+Address: <%= @booking.address %><br>
+
 
 
 <div class="controls">
