--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-#7AB80D">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-#7AB80D">
   <a class="navbar-brand" href="/">Chefz Table</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -45,6 +45,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/login">Sign Out</a>
       </li>
+
       </div>
     </nav>
     <br>
@@ -55,7 +56,7 @@
       <%= yield %>
       </body>
       </html>
-      
+
 <!-- Old code that I discontinued in favour of Bootstrap.
       </li>
       <% if @current_user.present? %>
