Why do I keep messing with the code

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -16,5 +16,11 @@
   <%= f.label :address %>
   <%= f.text_field :address, :autofocus => true, :required => true %>
 
+  <%= f.label :user_id %>
+  <%= f.text_field :user_id, :autofocus => true, :required => true %>
+
+  <%= f.label :cuisine_id %>
+  <%= f.text_field :cuisine_id, :autofocus => true, :required => true %>
+
   <%= f.submit %>
 <% end %>
